[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autourgos-llmkit"
version = "1.0.1"
description = "Unified LLM provider interface for Google Gemini, Anthropic Claude, OpenAI, Grok, Azure OpenAI, Ollama, and Vertex AI."
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.9"
authors = [
    { name = "Autourgos Developer", email = "autourgoskit@gmail.com" },
]
maintainers = [
    { name = "Autourgos Team", email = "autourgoskit@gmail.com" },
]
keywords = [
    "llm",
    "ai",
    "gemini",
    "openai",
    "anthropic",
    "claude",
    "grok",
    "ollama",
    "azure",
    "vertexai",
    "unified",
    "multimodal",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
google = ["google-generativeai>=0.5.0", "pillow>=10.0.0"]
anthropic = ["anthropic>=0.20.0"]
openai = ["openai>=1.0.0"]
ollama = ["ollama>=0.1.0"]
all = [
    "google-generativeai>=0.5.0",
    "pillow>=10.0.0",
    "anthropic>=0.20.0",
    "openai>=1.0.0",
    "ollama>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/devXjitin/autourgos-llmkit"
Documentation = "https://github.com/devXjitin/autourgos-llmkit#readme"
Repository = "https://github.com/devXjitin/autourgos-llmkit"
Issues = "https://github.com/devXjitin/autourgos-llmkit/issues"
Changelog = "https://github.com/devXjitin/autourgos-llmkit/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "MANIFEST.in"]

[tool.hatch.build.targets.wheel]
packages = ["src/autourgos"]
